[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "create-inspect-typeddict"
version = "0.1.0a0"
description = "Compatibility helpers for creating and inspecting TypedDict types."
readme = "README.md"
requires-python = ">=2"
license = "MIT"
authors = [
  { name="Jifeng Wu", email="jifengwu2k@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "typing; python_version < '3.5'",
    "typing-extensions"
]

[project.urls]
"Homepage" = "https://github.com/jifengwu2k/create-inspect-typeddict"
"Bug Tracker" = "https://github.com/jifengwu2k/create-inspect-typeddict/issues"
